# Aetherlang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  aethc  build.rs
.github/: pull_request_template.md
.github/workflows/: release.yml
aetherlang-vscode-extension/: LICENSE  README.md  aetherlang-1.0.2.vsix  aetherlang-file-icons.json  language-configuration.json  package.json
aetherlang-vscode-extension/syntaxes/: aetherlang.tmLanguage.json
example-aether-project/: README.md
example-aether-project/src/: main.ath
example-aether-project/tests/: main_test.ath
examples/: hello.ath
homebrew/: aetherlang.rb
my-service/: .gitignore  aether.toml
my-service/src/: main.ath
src/: lib.rs
src/compiler/: lexer.rs  mod.rs  parser.rs
src/core/: collections.rs  console.rs  datetime.rs  logging.rs  mod.rs  string.rs
src/core/auth/: mod.rs
src/core/tests/: auth_tests.rs  collections_tests.rs  console_tests.rs  datetime_tests.rs  logging_tests.rs  mod.rs  string_tests.rs
src/runtime/: mod.rs
