[package]
name = "aether-lang"
version = "1.1.0"
edition = "2021"
authors = ["Aether Language Team"]
description = "A cloud-native programming language"
license = "MIT"
repository = "https://github.com/iamvirul/Aetherlang.git"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
wasm-bindgen = "0.2"
async-trait = "0.1"
futures = "0.3"
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["make", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
colored = "2.0"
jsonwebtoken = "9.2"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.9"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "aethc"
path = "src/bin/aethc.rs"

[[bin]]
name = "aeth"
path = "src/bin/aeth.rs"

[lib]
name = "aether"
path = "src/lib.rs" 